// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meter render with  1`] = `
<DocumentFragment>
  .cache-q12lm2-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-38hwf5-StyledText-StyledStrength {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #b3144d;
}

.cache-15hdd4c-StyledWrapper {
  background-color: #f3f3f4;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-labelledby="meter-label"
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="0"
    role="meter"
    title="MyTitle"
  >
    <p
      class="cache-q12lm2-StyledText e13y3mga0"
      id="meter-label"
    >
      MyTitle
      <span
        class="e157fc5l2 cache-38hwf5-StyledText-StyledStrength e13y3mga0"
      >
        veryWeak
      </span>
    </p>
    <div
      class="cache-15hdd4c-StyledWrapper e157fc5l1"
    >
      <div
        class="cache-oco914-StyledMeter e157fc5l0"
        style="background-color: rgb(179, 20, 77); width: 20%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with medium password 1`] = `
<DocumentFragment>
  .cache-q12lm2-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15cg294-StyledText-StyledStrength {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: yellow;
}

.cache-15hdd4c-StyledWrapper {
  background-color: #f3f3f4;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-labelledby="meter-label"
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="2"
    role="meter"
    title="MyTitle"
  >
    <p
      class="cache-q12lm2-StyledText e13y3mga0"
      id="meter-label"
    >
      MyTitle
      <span
        class="e157fc5l2 cache-15cg294-StyledText-StyledStrength e13y3mga0"
      >
        medium
      </span>
    </p>
    <div
      class="cache-15hdd4c-StyledWrapper e157fc5l1"
    >
      <div
        class="cache-oco914-StyledMeter e157fc5l0"
        style="background-color: yellow; width: 60%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with strong value 1`] = `
<DocumentFragment>
  .cache-q12lm2-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1a9xin5-StyledText-StyledStrength {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #22674e;
}

.cache-15hdd4c-StyledWrapper {
  background-color: #f3f3f4;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-labelledby="meter-label"
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="3"
    role="meter"
    title="MyTitle"
  >
    <p
      class="cache-q12lm2-StyledText e13y3mga0"
      id="meter-label"
    >
      MyTitle
      <span
        class="e157fc5l2 cache-1a9xin5-StyledText-StyledStrength e13y3mga0"
      >
        strong
      </span>
    </p>
    <div
      class="cache-15hdd4c-StyledWrapper e157fc5l1"
    >
      <div
        class="cache-oco914-StyledMeter e157fc5l0"
        style="background-color: rgb(34, 103, 78); width: 80%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with very strong value 1`] = `
<DocumentFragment>
  .cache-q12lm2-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1a9xin5-StyledText-StyledStrength {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #22674e;
}

.cache-15hdd4c-StyledWrapper {
  background-color: #f3f3f4;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-labelledby="meter-label"
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="4"
    role="meter"
    title="MyTitle"
  >
    <p
      class="cache-q12lm2-StyledText e13y3mga0"
      id="meter-label"
    >
      MyTitle
      <span
        class="e157fc5l2 cache-1a9xin5-StyledText-StyledStrength e13y3mga0"
      >
        veryStrong
      </span>
    </p>
    <div
      class="cache-15hdd4c-StyledWrapper e157fc5l1"
    >
      <div
        class="cache-oco914-StyledMeter e157fc5l0"
        style="background-color: rgb(34, 103, 78); width: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with weak value 1`] = `
<DocumentFragment>
  .cache-q12lm2-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-25z33a-StyledText-StyledStrength {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #7c5400;
}

.cache-15hdd4c-StyledWrapper {
  background-color: #f3f3f4;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-labelledby="meter-label"
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="1"
    role="meter"
    title="MyTitle"
  >
    <p
      class="cache-q12lm2-StyledText e13y3mga0"
      id="meter-label"
    >
      MyTitle
      <span
        class="e157fc5l2 cache-25z33a-StyledText-StyledStrength e13y3mga0"
      >
        weak
      </span>
    </p>
    <div
      class="cache-15hdd4c-StyledWrapper e157fc5l1"
    >
      <div
        class="cache-oco914-StyledMeter e157fc5l0"
        style="background-color: rgb(124, 84, 0); width: 40%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
